feat: criação front e configurações

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,12 +3,18 @@ FROM node:20-alpine
 WORKDIR /app
 
 COPY package*.json ./
+COPY prisma ./prisma
+
 RUN npm install
+
+# Gera o client para TS
+RUN npx prisma generate
 
 COPY . .
 
 RUN npm run build
 
-EXPOSE 3000
+# 🔥 GERA NOVAMENTE PARA O RUNTIME FINAL
+RUN npx prisma generate
 
-CMD ["npm", "run", "start:prod"]
+CMD ["node", "dist/main.js"]
